domain updates and https

--- a/lablog/views/templates/base.html
+++ b/lablog/views/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}{% endblock %} | CRTLabs</title>
+        <title>{% block title %}{% endblock %} | Entropealabs</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="/static/js/vendor/jquery-2.1.3.min.js"></script>
         <link rel="stylesheet" href="/static/vendor/bootstrap-3.3.2-dist/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="{{ url_for('dashboard.index') }}">
-                        <img class="brand" src="{{url_for('static', filename='img/crt_logo.svg')}}" />
+                        <img class="brand" src="{{url_for('static', filename='img/logo2.png')}}" />
                     </a>
                 </div>
 
