--- a/lablog/views/templates/locations/property.html
+++ b/lablog/views/templates/locations/property.html
@@ -15,20 +15,12 @@
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">                <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    {% for i in range(1, loc.mls.PhotosCount) %}
-                        <li data-target="#carousel-example-generic" data-slide-to="{{i}}"></li>
-                    {% endfor %}
-                </ol>
 
+                </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="http://www.mredllc.com/photos/property/{{loc.mls.ListingId[-3:]}}/{{loc.mls.ListingId}}.jpg" alt="">
+                        <img src="http://www.mredllc.com/photos/property/{{loc.property_id[-3:]}}/{{loc.property_id}}.jpg" alt="">
                     </div>
-                    {% for i in range(1, loc.mls.PhotosCount) %}
-                        <div class="item">
-                            <img src="http://www.mredllc.com/photos/property/{{loc.mls.ListingId[-3:]}}/{{loc.mls.ListingId}}_{{i}}.jpg" alt="">
-                        </div>
-                    {% endfor %}
                 </div>
 
 
@@ -42,7 +34,6 @@
                 </a>
             </div>
             <div class="caption-full">
-                <h4 class="pull-right">{{"${:,.2f}".format(loc.mls.ListPrice)}}</h4>
                 <h4><a href="#">{{loc.mls.StreetNumber}} {{loc.mls.StreetName}}</a></h4>
                 <p>{{loc.mls.PublicRemarks}}</p>
             </div>
